tests/NormalTests/paczka1/fuzzy1/71507289.err
Error in line 4: 4BwHuL A38 74,9
Error in line 3: 6Xq0OzkW5 S429 85,2
Error in line 16: j5Cs8z S579 92,7
Error in line 20: Urex3oUs4o S4@9 59,1
Error in line 18: Urex3oUs4o S579 5,1
Error in line 21: Urex3oUs4o S429 2894,0
Error in line 13: 6Xq0OzkW5 S579 75,8
Error in line 39: 4BwHuL A38 0,89
Error in line 17: j5Cs8z S429 3,2
